[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
name = "mindleap-starter-python-client"
version = "1.0.5"
authors = [
    { name = "Erik Mata"},
]
description = "The official Python client library for Mindleap Starter"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://mindleap-io.github.io/python-client-starter/"
Issues = "https://github.com/mindleap-io/python-client-starter/issues"
